--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,9 @@
 #_config.yml
+title: Fun of clojure - wrap some code around data
+description: wrap some code around data
+show_downloads: false
+google_analytics: Fun of clojure wrap some code around data
+theme: jekyll-theme-cayman
 markdown: redcarpet
 redcarpet:
   extensions: ["tables", "fenced_code_blocks"]
