added clojure feed. added a step in clojure fun workflow

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 #_config.yml
 permalink: /posts/:title:output_ext
+baseurl: "https://sidesteps.github.io"
 exclude:
-    - publish.sh
+    - publish
+    - build
